--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,10 @@ djangorestframework = "*"
 django = "*"
 mysqlclient = "*"
 pillow = "*"
+djangorestframework-simplejwt = "*"
+ipdb = "*"
+requests = "*"
+django-cors-headers = "*"
 
 [dev-packages]
 jupyter = "*"
